# Sample

./: CMakeCache.txt  CMakeLists.txt  Jenkinsfile  Jenkinsfile.txt  Makefile  cmake_install.cmake  sonar-project.properties
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp  main.h  test_main.cpp
